fix z-index of the services type filter menu

--- a/src/scss/layout/feed/filtersZone/servicesTypeFilter.scss
+++ b/src/scss/layout/feed/filtersZone/servicesTypeFilter.scss
@@ -4,6 +4,7 @@
   gap: 0.5rem;
   position: relative;
   padding: 1rem 0;
+  z-index: 100;
   .services-type-filter-icon{
     font-size: 2rem;
     fill: $black;
